# ai-agentic-dbt-debugger

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
agent/: Dockerfile  pyproject.toml
agent/agent/: code_fix_main.py  linear_client.py  main.py  monitor.py  orchestrator.py  retry.py  telemetry.py
agent/agent/agents/: code_fix_agent.py  ticket_agent.py
agent/agent/tools/: clone_repo.py  comment_linear_issue.py  create_linear_issue.py  create_pull_request.py  create_ticket.py  git_commit_and_push.py  query_snowflake.py  read_dbt_logs.py  read_dbt_manifest.py  read_linear_issue.py  read_model_sql.py  read_repo_file.py  read_ticket.py  run_dbt_test.py  write_repo_file.py
code-env/: Dockerfile
dbt/: .user.yml  Dockerfile  dbt_project.yml  profiles.yml
dbt/macros/: generate_schema_name.sql
dbt/models/conformed/: dim_user.sql  fct_bet.sql  schema.yml
dbt/models/mart/: mart_bet_daily.sql  schema.yml
dbt/models/sources/: schema.yml
dbt/models/standardised/: schema.yml  std_bet.sql  std_transaction.sql  std_user.sql
dbt/scripts/: run_dbt.sh
localstack/init/ready.d/: 01_seed.py  01_setup.sf.sql
logs/dbt/runs/: 20260328T114627_20.manifest.json
monitor/: Dockerfile  db.py  schema.sql  server.py
monitor/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
monitor/frontend/src/: App.tsx  index.css  types.ts
monitor/static/: app.js  index.html  style.css
monitor/static/assets/: index-9tN4O_ul.css  index-C1ES4Zbv.js  index-Ch3lQvzz.js  (+3 more)
scripts/: dbt_with_agent.sh  inspect_data.py
(+23 files in other folders)
